--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Pocket</string>
+    <array name="link_types">
+        <item>Numer telefonu</item>
+        <item>Adres WWW</item>
+    </array>
+    <integer-array name="link_types_mapping">
+        <item>1</item>
+        <item>2</item>
+    </integer-array>
+
 </resources>
